--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "antd": "4.24.4",
     "axios": "1.2.0",
     "dayjs": "1.11.6",
+    "framer-motion": "^7.6.19",
     "rc-picker": "3.1.2",
     "react": "18.2.0",
     "react-beautiful-dnd": "13.1.1",
