--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@antv/g6": "4.7.16",
     "@react-spring/web": "9.5.5",
     "@reduxjs/toolkit": "1.9.1",
+    "@rive-app/react-canvas": "^3.0.33",
     "@tippyjs/react": "4.2.6",
     "antd": "4.24.4",
     "axios": "1.2.0",
