--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,12 @@
     "@antv/g6": "4.7.16",
     "@react-spring/web": "9.5.5",
     "@reduxjs/toolkit": "1.9.1",
+    "@rive-app/react-canvas": "^3.0.33",
     "@tippyjs/react": "4.2.6",
     "antd": "4.24.4",
     "axios": "1.2.0",
     "dayjs": "1.11.6",
+    "framer-motion": "^7.6.19",
     "rc-picker": "3.1.2",
     "react": "18.2.0",
     "react-beautiful-dnd": "13.1.1",
