--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,5 +1,5 @@
 .github/ @csesoc/technical
 renovate.json @csesoc/technical
 
-backend/ @Peedee2002 @imagine-hussain
-frontend/ @gtangelo @leonardo-fan
+backend/ @imagine-hussain
+frontend/ @leonardo-fan
