got through some of the mypy errors

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true,
     "python.testing.cwd": "${workspaceFolder}/backend",
+    "mypy.configFile": "./backend/mypy.ini",
     "files.exclude": {
         "**/__pycache__": true,
         "**/.hypothesis": true,
