--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
           echo "VITE_BACKEND_API_BASE_URL=http://localhost:8000/" >> env/frontend.env
           docker compose run ci-backend
       - name: Run mypy checks
-        run: python -m mypy ./backend
+        run: cd backend && python -m mypy . && cd ..
       - name: Test algorithm with pytest
         run: |
           cd backend
