--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,9 @@
         "**/__pycache__": true,
         "**/.hypothesis": true,
         "**/.pytest_cache": true
-    }
+    },
+    "python.linting.mypyEnabled": true,
+    "python.linting.mypyArgs": [
+        "--config-file=${workspaceFolder}/backend/mypy.ini"
+    ]
 }
