chore(docker-compose): fix dependency to run init-mongo on the database

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,7 +23,7 @@ services:
     env_file:
       - ./env/backend.env
     depends_on:
-      - mongodb
+      - init-mongo
     networks:
       - circles-net
     volumes:
