chore(deps): group `mypy`

--- a/renovate.json
+++ b/renovate.json
@@ -32,6 +32,10 @@
     {
       "matchLanguages": ["python"],
       "addLabels": ["deps: python"]
-    }
+    },
+    {
+      "matchPackageNames": ["mypy", "mypy-extensions"],
+      "groupName": "mypy",
+    },
   ]
 }
