style(backend): address pylint issues (#1015)
Brings pylint score from 9.49 to 9.77.

- Fixed up most non-docstring-related pylint errors
- Removed redundant .pylintrc in workflows directory
- Sorted imports in all python files with isort . -l 120
- Made comment spacing consistent (2 spaces before # if inline, 1 space after #)
- Replaced an if-else with match

--- a/.pylintrc
+++ b/.pylintrc
@@ -75,7 +75,9 @@ disable=import-error,                     # allow import from folder.file instea
         global-statement,                 # allow use of globals. Used for filepaths and configs
         too-few-public-methods,           # need classes with zero public methods as abstract objects
         duplicate-code,                   # Code duplication due to progtype1. TODO: Fix on complete refactor
-        no-name-in-module                 # seems to be similar to import-error
+        no-name-in-module,                # seems to be similar to import-error
+        missing-module-docstring,         # allow for missing module docstrings, democratially ignored
+        useless-parent-delegation         # allow for methods that just return super().method()
       #   parameter-unpacking,      
       #   unpacking-in-except,
       #   old-raise-syntax,
@@ -449,11 +451,12 @@ good-names=i,
            k,
            ex,
            Run,
-           _
+           _,
+           f
 
 # Good variable names regexes, separated by a comma. If names match any regex,
 # they will always be accepted
-good-names-rgxs=
+good-names-rgxs=^([A-Z]{4})_FIXES
 
 # Include a hint for the correct naming format with invalid-name.
 include-naming-hint=no
