--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,8 @@
     "antd": "4.24.5",
     "axios": "1.2.1",
     "dayjs": "1.11.7",
-    "jwt-decode": "^3.1.2",
     "framer-motion": "^7.6.19",
+    "jwt-decode": "^3.1.2",
     "rc-picker": "3.1.2",
     "react": "18.2.0",
     "react-beautiful-dnd": "13.1.1",
@@ -25,6 +25,7 @@
     "react-dom": "18.2.0",
     "react-helmet": "6.1.0",
     "react-icons": "4.7.1",
+    "react-query": "^3.39.3",
     "react-redux": "8.0.5",
     "react-router-dom": "6.9.0",
     "react-scroll": "1.8.9",
