--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -3,6 +3,5 @@
     "tabWidth": 2,
     "printWidth": 100,
     "singleQuote": true,
-    "trailingComma": "none",
-    "endOfLine": "lf"
+    "trailingComma": "none"
 }
