--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ eggs/
 .eggs/
 lib/
 lib64/
+lib64
 parts/
 sdist/
 var/
@@ -70,6 +71,7 @@ tmp.*
 **/.vscode
 **/.DS_Store
 .idea
+**/Session.vim
 
 # secret
 SECRET
