--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "antd": "4.24.8",
     "axios": "1.2.1",
     "dayjs": "1.11.7",
+    "fast-fuzzy": "^1.12.0",
     "framer-motion": "^10.0.0",
     "rc-picker": "3.1.2",
     "react": "18.2.0",
