--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,7 @@ tmp.*
 **/.vscode
 **/.DS_Store
 .idea
+**/Session.vim
 
 # "sensitive" data (i.e. raw zID)
 backend/data/scrapers/enrolmentDataRaw.json
