--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,20 @@
 # TODO: move to pipenv
-fastapi==0.88.0
+absl-py==1.4.0
+anyio==3.7.1
+attrs==23.1.0
+Authlib==1.2.1
+cachetools==5.3.1
+certifi==2023.7.22
+cffi==1.15.1
+charset-normalizer==2.1.1
+click==8.1.7
+cryptography==41.0.3
+dnspython==2.4.2
+exceptiongroup==1.1.3
+fastapi==0.103.1
 fuzzywuzzy==0.18.0
 google-auth==2.10.0
+h11==0.14.0
 hypothesis==6.61.0
 mypy==1.2.0
 mypy-extensions==1.0.0
@@ -16,3 +29,17 @@ types-requests==2.28.11.15
 uvicorn==0.20.0
 PyPDF2==3.0.1
 python-multipart==0.0.6
+idna==3.4
+iniconfig==2.0.0
+PyJWT==2.8.0
+rapidfuzz==2.15.1
+rsa==4.9
+six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+starlette==0.27.0
+tomli==2.0.1
+types-cryptography==3.3.23.2
+types-urllib3==1.26.25.14
+typing_extensions==4.7.1
+urllib3==1.26.16
