--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "11.0.20",
     "jwt-decode": "4.0.0",
     "rc-picker": "4.3.0",
+    "nanoid": "^4.0.2",
     "react": "18.2.0",
     "react-beautiful-dnd": "13.1.1",
     "react-component-export-image": "1.0.6",
