--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "circles",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@ant-design/colors": "6.0.0",
     "@ant-design/icons": "4.8.0",
@@ -74,14 +75,14 @@
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "14.4.3",
+    "@types/node": "^20.10.6",
     "@types/react-beautiful-dnd": "13.1.3",
     "@types/react-helmet": "6.1.6",
     "@types/react-scroll": "1.8.5",
     "@types/styled-components": "5.1.26",
     "@typescript-eslint/eslint-plugin": "5.56.0",
     "@typescript-eslint/parser": "5.56.0",
-    "@vitejs/plugin-react": "3.0.0",
-    "@vitest/coverage-c8": "0.29.7",
+    "@vitejs/plugin-react": "4.2.1",
     "axios-mock-adapter": "1.21.2",
     "eslint": "8.30.0",
     "eslint-config-airbnb": "19.0.4",
@@ -100,10 +101,10 @@
     "prettier": "2.8.1",
     "react-is": "18.2.0",
     "typescript": "4.9.4",
-    "vite": "4.0.1",
-    "vite-plugin-checker": "0.5.2",
+    "vite": "5.0.10",
+    "vite-plugin-checker": "0.6.2",
     "vite-plugin-eslint": "1.8.1",
-    "vite-plugin-svgr": "2.4.0",
-    "vitest": "0.29.7"
+    "vite-plugin-svgr": "4.2.0",
+    "vitest": "1.1.1"
   }
 }
