--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "eslint.workingDirectories": [
         "frontend"
     ],
+    "VitestRunner.executionArg": "npx --prefix frontend",
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true,
     "python.testing.cwd": "${workspaceFolder}/backend",
