--- a/frontend/package.json
+++ b/frontend/package.json
@@ -75,6 +75,7 @@
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "14.4.3",
+    "@types/google.accounts": "^0.0.14",
     "@types/node": "^20.10.6",
     "@types/react-beautiful-dnd": "13.1.3",
     "@types/react-helmet": "6.1.6",
