--- a/frontend/package.json
+++ b/frontend/package.json
@@ -74,15 +74,17 @@
   "devDependencies": {
     "@babel/core": "7.23.7",
     "@testing-library/dom": "9.3.3",
-    "@testing-library/jest-dom": "6.2.0",
+    "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "14.1.2",
     "@testing-library/user-event": "14.5.2",
     "@types/google.accounts": "0.0.14",
+    "@types/jest": "29.5.11",
     "@types/node": "20.10.7",
     "@types/react-beautiful-dnd": "13.1.8",
     "@types/react-helmet": "6.1.11",
     "@types/react-scroll": "1.8.10",
     "@types/styled-components": "5.1.34",
+    "@types/testing-library__jest-dom": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "6.18.0",
     "@typescript-eslint/parser": "6.18.0",
     "@vitejs/plugin-react": "4.2.1",
