--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,18 +8,18 @@
   },
   "dependencies": {
     "@ant-design/colors": "7.0.2",
-    "@ant-design/icons": "5.2.6",
-    "@ant-design/plots": "2.1.5",
+    "@ant-design/icons": "5.3.0",
+    "@ant-design/plots": "2.1.12",
     "@antv/algorithm": "0.1.26",
     "@antv/g6": "4.8.24",
     "@react-spring/web": "9.7.3",
-    "@reduxjs/toolkit": "2.0.1",
-    "@rive-app/react-canvas": "4.7.0",
+    "@reduxjs/toolkit": "2.1.0",
+    "@rive-app/react-canvas": "4.7.1",
     "@tippyjs/react": "4.2.6",
-    "antd": "5.12.8",
-    "axios": "1.6.5",
+    "antd": "5.13.3",
+    "axios": "1.6.7",
     "dayjs": "1.11.10",
-    "framer-motion": "10.17.9",
+    "framer-motion": "11.0.3",
     "jwt-decode": "4.0.0",
     "rc-picker": "3.14.6",
     "react": "18.2.0",
@@ -28,17 +28,18 @@
     "react-contexify": "6.0.0",
     "react-dom": "18.2.0",
     "react-helmet": "6.1.0",
-    "react-icons": "4.12.0",
+    "react-icons": "5.0.1",
     "react-query": "3.39.3",
-    "react-redux": "9.0.4",
-    "react-router-dom": "6.21.1",
+    "react-redux": "9.1.0",
+    "react-router-dom": "6.21.3",
     "react-scroll": "1.9.0",
-    "react-tooltip": "5.25.1",
+    "react-tooltip": "5.26.0",
     "redux": "5.0.1",
     "redux-persist": "6.0.0",
-    "redux-thunk": "3.0.1",
-    "styled-components": "6.1.6",
-    "use-debounce": "10.0.0"
+    "redux-thunk": "3.1.0",
+    "styled-components": "6.1.8",
+    "use-debounce": "10.0.0",
+    "uuid": "^9.0.1"
   },
   "scripts": {
     "start": "vite --port 3000 --host",
@@ -72,21 +73,22 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "7.23.7",
-    "@testing-library/dom": "9.3.3",
-    "@testing-library/jest-dom": "^6.2.0",
-    "@testing-library/react": "14.1.2",
+    "@babel/core": "7.23.9",
+    "@testing-library/dom": "9.3.4",
+    "@testing-library/jest-dom": "6.4.1",
+    "@testing-library/react": "14.2.0",
     "@testing-library/user-event": "14.5.2",
     "@types/google.accounts": "0.0.14",
     "@types/jest": "29.5.11",
-    "@types/node": "20.10.7",
+    "@types/node": "20.11.14",
     "@types/react-beautiful-dnd": "13.1.8",
     "@types/react-helmet": "6.1.11",
     "@types/react-scroll": "1.8.10",
     "@types/styled-components": "5.1.34",
-    "@types/testing-library__jest-dom": "^6.0.0",
-    "@typescript-eslint/eslint-plugin": "6.18.0",
-    "@typescript-eslint/parser": "6.18.0",
+    "@types/testing-library__jest-dom": "6.0.0",
+    "@types/uuid": "9.0.8",
+    "@typescript-eslint/eslint-plugin": "6.20.0",
+    "@typescript-eslint/parser": "6.20.0",
     "@vitejs/plugin-react": "4.2.1",
     "axios-mock-adapter": "1.22.0",
     "eslint": "8.56.0",
@@ -96,20 +98,20 @@
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-jsx-a11y": "6.8.0",
     "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-prettier": "5.1.2",
+    "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-react": "7.33.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-simple-import-sort": "10.0.0",
-    "jsdom": "23.2.0",
+    "jsdom": "24.0.0",
     "less": "4.2.0",
-    "prettier": "3.1.1",
+    "prettier": "3.2.4",
     "react-is": "18.2.0",
     "typescript": "5.3.3",
-    "vite": "5.0.11",
-    "vite-plugin-checker": "0.6.2",
+    "vite": "5.0.12",
+    "vite-plugin-checker": "0.6.3",
     "vite-plugin-eslint": "1.8.1",
     "vite-plugin-svgr": "4.2.0",
-    "vitest": "1.1.3"
+    "vitest": "1.2.2"
   }
 }
