--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,10 +36,10 @@
   },
   "scripts": {
     "start": "vite --port 3000 --host",
-    "start:local": "VITE_BACKEND_API_BASE_URL=https://circlesapi.csesoc.app vite --port 3000 --host",
+    "start:local": "VITE_BACKEND_API_BASE_URL=https://circlesapi.devsoc.app vite --port 3000 --host",
     "build": "vite build",
     "preview": "vite preview --port 3000 --host",
-    "preview:local": "VITE_BACKEND_API_BASE_URL=https://circlesapi.csesoc.app vite preview --port 3000 --host",
+    "preview:local": "VITE_BACKEND_API_BASE_URL=https://circlesapi.devsoc.app vite preview --port 3000 --host",
     "test": "vitest run",
     "coverage": "vitest run --coverage",
     "lint": "eslint src/**/*.{ts,tsx}",
