fix: change code owners to use lead team name

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,4 +1,4 @@
-* @martanman @ollibowers
+*              @devsoc-unsw/circles-leads
 
-.github/ @devsoc-unsw/platform
-renovate.json @devsoc-unsw/platform
+.github/       @devsoc-unsw/platform
+renovate.json  @devsoc-unsw/platform
