wip: setup redis docker

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,29 @@ services:
       - circles-net
     ports:
       - '27017:27017'
+
+  sessionsdb:
+    image: redis/redis-stack:7.2.0-v9
+    container_name: sessionsdb
+    ports:
+      - '8001:8001'
+      - '6379:6379'
+    volumes:
+      - ./backend/redis.conf:/redis-stack.conf
+    networks:
+      - circles-net
+
+  init-redis:
+    # populates the session db
+    build:
+      context: ./backend
+      dockerfile: init-redis.dockerfile
+    container_name: init-redis
+    depends_on:
+      - sessionsdb
+    networks:
+      - circles-net
+
   backend:
     build:
       context: ./backend
@@ -22,11 +45,13 @@ services:
       - ./env/backend.env
     depends_on:
       - init-mongo
+      - init-redis
     networks:
       - circles-net
     volumes:
       # Bind mount volume for live backend updates while developing
       - ./backend:/backend
+
   backend-prod:
     build:
       context: ./backend
@@ -40,6 +65,7 @@ services:
       - mongodb
     networks:
       - circles-net
+
   frontend:
     build:
       context: ./frontend
@@ -58,6 +84,7 @@ services:
       - backend
     networks:
       - circles-net
+
   frontend-prod:
     build:
       context: ./frontend
@@ -73,6 +100,7 @@ services:
       - backend-prod
     networks:
       - circles-net
+
   init-mongo:
     # Utility container to populate / overwrite database
     # Run after build or when you need to overwrite data
@@ -86,6 +114,7 @@ services:
       - mongodb
     networks:
       - circles-net
+
   ci-backend:
     # Utility container to populate / overwrite database
     # Run after build or when you need to overwrite data
