--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,6 @@
-# TODO: move to pipenv
 absl-py==1.4.0
 anyio==3.7.1
+async-timeout==4.0.3
 attrs==23.1.0
 Authlib==1.2.1
 cachetools==5.3.1
@@ -16,6 +16,7 @@ fuzzywuzzy==0.18.0
 google-auth==2.10.0
 h11==0.14.0
 hypothesis==6.61.0
+Levenshtein==0.20.9
 mypy==1.2.0
 mypy-extensions==1.0.0
 ortools==9.8.3296
@@ -23,6 +24,7 @@ pymongo==4.3.3
 pytest==7.2.2
 python-dotenv==1.0.0
 python-Levenshtein==0.25.0
+redis==5.0.3
 requests==2.31.0
 types-paramiko==3.3.0.0
 types-requests==2.28.11.15
