--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   mongodb:
     image: mongo:6.0.14
@@ -33,7 +31,7 @@ services:
     build:
       context: ./backend
       dockerfile: production.dockerfile
-    container_name: backend
+    container_name: backend-prod
     ports:
       - '8000:8000'
     env_file:
@@ -64,7 +62,7 @@ services:
     build:
       context: ./frontend
       dockerfile: production.dockerfile
-    container_name: frontend
+    container_name: frontend-prod
     ports:
       - '3000:80'
     env_file:
@@ -94,7 +92,7 @@ services:
     build:
       context: ./backend
       dockerfile: init-mongo.dockerfile
-    container_name: init-mongo
+    container_name: init-mongo-ci
     env_file:
       - ./env/backend.env
     depends_on:
