--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,25 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "type": "module",
-  "overrides": {
-    "d3-color": "3.1.0"
-  },
   "dependencies": {
     "@ant-design/colors": "7.0.2",
     "@ant-design/icons": "5.3.0",
-    "@ant-design/plots": "2.1.12",
+    "@ant-design/plots": "2.1.15",
     "@antv/algorithm": "0.1.26",
     "@antv/g6": "4.8.24",
     "@react-spring/web": "9.7.3",
-    "@reduxjs/toolkit": "2.1.0",
-    "@rive-app/react-canvas": "4.7.1",
+    "@reduxjs/toolkit": "2.2.2",
+    "@rive-app/react-canvas": "4.8.3",
     "@tippyjs/react": "4.2.6",
-    "antd": "5.13.3",
-    "axios": "1.6.7",
+    "antd": "5.15.4",
+    "axios": "1.6.8",
     "dayjs": "1.11.10",
-    "framer-motion": "11.0.3",
+    "framer-motion": "11.0.20",
     "jwt-decode": "4.0.0",
-    "rc-picker": "3.14.6",
+    "rc-picker": "4.3.0",
     "react": "18.2.0",
     "react-beautiful-dnd": "13.1.1",
     "react-component-export-image": "1.0.6",
@@ -31,9 +28,9 @@
     "react-icons": "5.0.1",
     "react-query": "3.39.3",
     "react-redux": "9.1.0",
-    "react-router-dom": "6.21.3",
+    "react-router-dom": "6.22.3",
     "react-scroll": "1.9.0",
-    "react-tooltip": "5.26.0",
+    "react-tooltip": "5.26.3",
     "redux": "5.0.1",
     "redux-persist": "6.0.0",
     "redux-thunk": "3.1.0",
@@ -43,10 +40,10 @@
   },
   "scripts": {
     "start": "vite --port 3000 --host",
-    "start:local": "VITE_BACKEND_API_BASE_URL=https://circlesapi.csesoc.app vite --port 3000 --host",
+    "start:local": "VITE_BACKEND_API_BASE_URL=https://circlesapi.devsoc.app vite --port 3000 --host",
     "build": "vite build",
     "preview": "vite preview --port 3000 --host",
-    "preview:local": "VITE_BACKEND_API_BASE_URL=https://circlesapi.csesoc.app vite preview --port 3000 --host",
+    "preview:local": "VITE_BACKEND_API_BASE_URL=https://circlesapi.devsoc.app vite preview --port 3000 --host",
     "test": "vitest run",
     "coverage": "vitest run --coverage",
     "lint": "eslint src/**/*.{ts,tsx}",
@@ -73,45 +70,45 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "7.23.9",
+    "@babel/core": "7.24.3",
     "@testing-library/dom": "9.3.4",
-    "@testing-library/jest-dom": "6.4.1",
-    "@testing-library/react": "14.2.0",
+    "@testing-library/jest-dom": "6.4.2",
+    "@testing-library/react": "14.2.2",
     "@testing-library/user-event": "14.5.2",
     "@types/google.accounts": "0.0.14",
-    "@types/jest": "29.5.11",
-    "@types/node": "20.11.14",
+    "@types/jest": "29.5.12",
+    "@types/node": "20.11.30",
     "@types/react-beautiful-dnd": "13.1.8",
     "@types/react-helmet": "6.1.11",
     "@types/react-scroll": "1.8.10",
     "@types/styled-components": "5.1.34",
     "@types/testing-library__jest-dom": "6.0.0",
     "@types/uuid": "9.0.8",
-    "@typescript-eslint/eslint-plugin": "6.20.0",
-    "@typescript-eslint/parser": "6.20.0",
+    "@typescript-eslint/eslint-plugin": "7.3.1",
+    "@typescript-eslint/parser": "7.3.1",
     "@vitejs/plugin-react": "4.2.1",
     "axios-mock-adapter": "1.22.0",
-    "eslint": "8.56.0",
+    "eslint": "8.57.0",
     "eslint-config-airbnb": "19.0.4",
-    "eslint-config-airbnb-typescript": "17.1.0",
+    "eslint-config-airbnb-typescript": "18.0.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-jsx-a11y": "6.8.0",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-promise": "6.1.1",
-    "eslint-plugin-react": "7.33.2",
+    "eslint-plugin-react": "7.34.1",
     "eslint-plugin-react-hooks": "4.6.0",
-    "eslint-plugin-simple-import-sort": "10.0.0",
+    "eslint-plugin-simple-import-sort": "12.0.0",
     "jsdom": "24.0.0",
     "less": "4.2.0",
-    "prettier": "3.2.4",
+    "prettier": "3.2.5",
     "react-is": "18.2.0",
-    "typescript": "5.3.3",
-    "vite": "5.0.12",
-    "vite-plugin-checker": "0.6.3",
+    "typescript": "5.4.3",
+    "vite": "5.2.6",
+    "vite-plugin-checker": "0.6.4",
     "vite-plugin-eslint": "1.8.1",
     "vite-plugin-svgr": "4.2.0",
-    "vitest": "1.2.2"
+    "vitest": "1.4.0"
   }
 }
