--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "antd": "5.15.4",
     "axios": "1.6.8",
     "dayjs": "1.11.10",
+    "fast-fuzzy": "^1.12.0",
     "framer-motion": "11.0.20",
     "jwt-decode": "4.0.0",
     "rc-picker": "4.3.0",
