--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,47 +1,57 @@
-absl-py==1.4.0
-anyio==3.7.1
+absl-py==2.1.0
+anyio==4.3.0
 async-timeout==4.0.3
-attrs==23.1.0
-Authlib==1.2.1
-cachetools==5.3.1
-certifi==2023.7.22
-cffi==1.15.1
-charset-normalizer==2.1.1
+attrs==23.2.0
+cachetools==5.3.3
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
 click==8.1.7
-cryptography==41.0.3
-dnspython==2.4.2
-exceptiongroup==1.1.3
-fastapi==0.103.1
+cryptography==42.0.5
+dnspython==2.6.1
+exceptiongroup==1.2.1
+fastapi==0.88.0
 fuzzywuzzy==0.18.0
 google-auth==2.10.0
 h11==0.14.0
 hypothesis==6.61.0
-Levenshtein==0.20.9
+idna==3.7
+iniconfig==2.0.0
+Levenshtein==0.25.0
 mypy==1.2.0
 mypy-extensions==1.0.0
+numpy==1.26.4
 ortools==9.8.3296
+packaging==24.0
+pandas==2.2.2
+pluggy==1.5.0
+protobuf==5.26.1
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycparser==2.22
+pydantic==1.10.15
+PyJWT==2.8.0
 pymongo==4.3.3
+PyPDF2==3.0.1
 pytest==7.2.2
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.0
 python-Levenshtein==0.25.0
+python-multipart==0.0.6
+pytz==2024.1
+rapidfuzz==3.8.1
 redis==5.0.3
 requests==2.31.0
-types-paramiko==3.3.0.0
-types-requests==2.28.11.15
-uvicorn==0.20.0
-PyPDF2==3.0.1
-python-multipart==0.0.6
-idna==3.4
-iniconfig==2.0.0
-PyJWT==2.8.0
-rapidfuzz==2.15.1
 rsa==4.9
 six==1.16.0
-sniffio==1.3.0
+sniffio==1.3.1
 sortedcontainers==2.4.0
-starlette==0.27.0
+starlette==0.22.0
 tomli==2.0.1
-types-cryptography==3.3.23.2
+types-paramiko==3.3.0.0
+types-requests==2.28.11.15
 types-urllib3==1.26.25.14
-typing_extensions==4.7.1
-urllib3==1.26.16
+typing_extensions==4.11.0
+tzdata==2024.1
+urllib3==2.2.1
+uvicorn==0.20.0
