--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,18 +1,18 @@
-# TODO: move to pipenv
-fastapi==0.88.0
+fastapi==0.110.2
 fuzzywuzzy==0.18.0
-google-auth==2.10.0
 hypothesis==6.61.0
-mypy==1.2.0
 mypy-extensions==1.0.0
-ortools==9.8.3296
-pymongo==4.3.3
-pytest==7.2.2
-python-dotenv==1.0.0
-python-Levenshtein==0.25.0
+mypy==1.10.0
+ortools==9.9.3963
+paramiko==3.4.0
+pydantic==2.7.1
+pymongo==4.7.0
+pypdf==4.2.0
+pytest==7.4.4
+python-dotenv==1.0.1
+python-Levenshtein==0.25.1
+python-multipart==0.0.9
 requests==2.31.0
-types-paramiko==3.3.0.0
-types-requests==2.28.11.15
-uvicorn==0.20.0
-PyPDF2==3.0.1
-python-multipart==0.0.6
+types-paramiko==3.4.0.20240423
+types-requests==2.31.0.20240406
+uvicorn==0.29.0
