--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,6 +17,8 @@ services:
     container_name: sessionsdb
     ports:
       - '8001:8001'
+      - '6379:6379'
+      # TODO: setup a password for redis
     volumes:
       - ./backend/redis.conf:/redis-stack.conf
     networks:
@@ -31,6 +33,7 @@ services:
       - '8000:8000'
     env_file:
       - ./env/backend.env
+    # tty: true
     depends_on:
       - init-mongo
     networks:
