feat: effectively removed init-mongo

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -35,7 +35,8 @@ services:
       - ./env/backend.env
     # tty: true
     depends_on:
-      - init-mongo
+      - mongodb
+      - sessionsdb
     networks:
       - circles-net
     volumes:
