--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,7 +18,7 @@ services:
     ports:
       - '8001:8001'
       - '6379:6379'
-      # TODO: setup a password for redis
+      # TODO-OLLI: setup a password for redis
     volumes:
       - ./backend/redis.conf:/redis-stack.conf
     networks:
