feat: redis password

--- a/backend/redis.conf
+++ b/backend/redis.conf
@@ -2,3 +2,6 @@
 # https://stackoverflow.com/questions/28785383/how-to-disable-persistence-with-redis
 appendonly no
 save ""
+# ensures that the only access is via env user
+user default off
+# protected-mode yes  # this doesnt work, but its ok, as long as port is not exposed without password
