--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,10 +23,10 @@ jobs:
     steps:
       - name: Checking out repository
         uses: actions/checkout@v3
-      - name: Set up Python (latest)
+      - name: Set up Python 3.12.3
         uses: actions/setup-python@v4
         with:
-          python-version: "3.10.5"
+          python-version: "3.12.3"
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -59,10 +59,10 @@ jobs:
     steps:
       - name: Checking out repository
         uses: actions/checkout@v3
-      - name: Set up Python (latest)
+      - name: Set up Python 3.12.3
         uses: actions/setup-python@v4
         with:
-          python-version: "3.x"
+          python-version: "3.12.3"
       - name: Run frontend tests
         run: |
           cd frontend
