--- a/.github/workflows/pylinter.yml
+++ b/.github/workflows/pylinter.yml
@@ -23,10 +23,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python
       uses: actions/setup-python@v4
       with: 
-        python-version: "3.x"
+        python-version: "3.12"
 
     - name: Install dependencies
       run: |
