--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -18,7 +18,11 @@ immutabledict==4.2.0
 iniconfig==2.0.0
 Levenshtein==0.25.1
 mypy==1.10.0
+mypy-extensions==1.0.0
+numpy==1.26.4
 ortools==9.10.4067
+packaging==24.1
+pandas==2.2.2
 paramiko==3.4.0
 pluggy==1.5.0
 protobuf==5.26.1
