--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
     "@react-spring/web": "9.7.3",
     "@reduxjs/toolkit": "2.2.2",
     "@rive-app/react-canvas": "4.8.3",
-    "@tanstack/react-query": "^5.35.1",
+    "@tanstack/react-query": "5.29.2",
     "@tippyjs/react": "4.2.6",
     "antd": "5.15.4",
     "axios": "1.6.8",
