--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -94,21 +94,7 @@ services:
     networks:
       - circles-net
 
-  init-mongo:
-    # Utility container to populate / overwrite database
-    # Run after build or when you need to overwrite data
-    build:
-      context: ./backend
-      dockerfile: init-mongo.dockerfile
-    container_name: init-mongo
-    env_file:
-      - ./env/backend.env
-    depends_on:
-      - mongodb
-      - sessionsdb
-    networks:
-      - circles-net
-
+  # TODO-OLLI(pm): idek if this works or how it should work post init-mongo death
   ci-backend:
     # Utility container to populate / overwrite database
     # Run after build or when you need to overwrite data
