feat: added new cli arg for deleting user data aswell, updated ci backend container to mirror prod but use this
Also finally deleted init-mongo.dockerfile and init-database.py

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
           echo REDIS_PASSWORD=github-ci >> env/sessionsdb.env
           echo REDIS_ARGS="--user ${REDIS_USERNAME} on >${REDIS_PASSWORD} ~* allcommands" >> env/sessionsdb.env
 
-          docker compose run ci-backend
+          docker compose up -d ci-backend
       - name: Run mypy checks
         run: cd backend && python -m mypy . && cd ..
       - name: Test algorithm with pytest
