--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -94,20 +94,24 @@ services:
     networks:
       - circles-net
 
-  # TODO-OLLI(pm): idek if this works or how it should work post init-mongo death
   ci-backend:
-    # Utility container to populate / overwrite database
-    # Run after build or when you need to overwrite data
+    # Utility to run the backend with a entirely clean database for testing
+    # Should be identical to the backend production, except for the different entrypoint
     build:
       context: ./backend
-      dockerfile: init-mongo.dockerfile
-    container_name: init-mongo-ci
+      dockerfile: production.dockerfile
+    container_name: ci-backend
+    ports:
+      - '8000:8000'
     env_file:
       - ./env/backend.env
     depends_on:
-      - backend
+      - mongodb
+      - sessionsdb
     networks:
       - circles-net
+    # THIS IS IMPORTANT
+    entrypoint: ["python3", "-u", "runserver.py", "--overwrite-all-data"]
 
 # Note only named volumes need to be listed here for persistance.
 volumes:
