--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: Unit Tests
 
 on:
   pull_request:
-    branches: [dev, main, CIRCLES-331/user-data-to-backend, 331-staging]
+    branches: [dev, main, 331-staging]
 
 jobs:
   event_file:
