--- a/.github/workflows/pylinter.yml
+++ b/.github/workflows/pylinter.yml
@@ -13,7 +13,7 @@ name: Pylint
 
 on:
   pull_request:
-    branches: [dev, main, CIRCLES-331/user-data-to-backend]
+    branches: [dev, main, 331-staging]
 
 jobs:
   build:
