--- a/.github/actions/setup-ci-env/action.yml
+++ b/.github/actions/setup-ci-env/action.yml
@@ -11,7 +11,9 @@ runs:
       with:
         python-version: "3.12"
     - name: Install dotenv
-      run: pip install dotenv
+      run: |
+        python -m pip install --upgrade pip
+        pip install dotenv
       shell: bash
     - name: Create env files
       run: >
