--- a/.github/actions/setup-ci-env/action.yml
+++ b/.github/actions/setup-ci-env/action.yml
@@ -4,9 +4,7 @@ description: "Sets up the environment variables required for the testing contain
 runs:
   using: "composite"
   steps:
-    - name: Checking out repository
-      uses: actions/checkout@v4
-    - name: Set up Python 3.12
+    - name: Set up python 3.12
       uses: actions/setup-python@v4
       with:
         python-version: "3.12"
