--- a/.github/actions/setup-ci-frontend/action.yml
+++ b/.github/actions/setup-ci-frontend/action.yml
@@ -7,7 +7,7 @@ runs:
     - name: Set up node LTS
       uses: actions/setup-node@v4
       with:
-        node-version: "lts"
+        node-version: "lts/*"  # latest lts, should pin this if we pin the docker containers
     - name: Install dependencies
       run: npm ci
       shell: bash
