--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,6 +53,9 @@ jobs:
         uses: ./.github/actions/setup-ci-env
       - name: Run the backend container
         run: docker compose up -d ci-backend
+      - name: Wait for backend to initialise  # cringe as hell, remove when we get health checks to wait on
+        run: sleep 90s
+        shell: bash
       - name: Test algorithm with pytest
         run: |
           pip install pytest-cov
